Refactor Backpropagation Notebook: Update execution counts, improve comments, and enhance output accuracy

--- a/CS 3A/KYLA_ELIJAH_RAMIRO/RAMIRO-EXERCISE_4.ipynb
+++ b/CS 3A/KYLA_ELIJAH_RAMIRO/RAMIRO-EXERCISE_4.ipynb
@@ -17,7 +17,7 @@
    "id": "96038a63",
    "metadata": {},
    "source": [
-    "## **Task: Study the Backpropagation implementation and perform the following:**\n",
+    "## **Task: Study the Backpropagation implementation and perform the following**\n",
     "\n",
     "1. **Set up code for Forward Pass, Backpropagation, and Weight Update (1000 epochs)**\n",
     "2. **Modify Optimizer class with 3 optimization techniques**\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "1d9192d5",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "id": "1642dbf3",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,13 @@
     "# Library imports\n",
     "import numpy as np\n",
     "import nnfs\n",
-    "from nnfs.datasets import spiral_data"
+    "from nnfs.datasets import spiral_data\n",
+    "\n",
+    "# ============================================================\n",
+    "# Set Random Seeds for Reproducibility\n",
+    "# ============================================================\n",
+    "np.random.seed(42)  # NumPy random seed\n",
+    "nnfs.init()  # Initialize NNFS (sets internal seed)"
    ]
   },
   {
@@ -85,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "id": "cd8ef9d1",
    "metadata": {},
    "outputs": [],
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "id": "f30aacc6",
    "metadata": {},
    "outputs": [],
@@ -204,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "id": "58097b15",
    "metadata": {},
    "outputs": [],
@@ -316,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "id": "b5e89775",
    "metadata": {},
    "outputs": [],
@@ -394,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "id": "78038171",
    "metadata": {},
    "outputs": [
@@ -422,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "id": "037df41f",
    "metadata": {},
    "outputs": [],
@@ -461,7 +467,7 @@
     "# Option 4: SGD with AdaGrad (Adaptive Gradient)\n",
     "# optimizer = Optimizer_SGD(learning_rate=1.0, use_adagrad=True)\n",
     "\n",
-    "# Option 5: Combining all techniques (RECOMMENDED)\n",
+    "# Option 5: Combining all techniques \n",
     "optimizer = Optimizer_SGD(learning_rate=1.0, decay=0.001, momentum=0.9, use_adagrad=False)"
    ]
   },
@@ -485,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "id": "01757e88",
    "metadata": {},
    "outputs": [
@@ -493,27 +499,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:    0 | Loss: 1.0986 | Accuracy: 36.00% | LR: 1.000000\n",
-      "Epoch:  100 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.909091\n",
-      "Epoch:  100 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.909091\n",
-      "Epoch:  200 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.833333\n",
-      "Epoch:  200 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.833333\n",
-      "Epoch:  300 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.769231\n",
-      "Epoch:  300 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.769231\n",
-      "Epoch:  400 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.714286\n",
-      "Epoch:  400 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.714286\n",
-      "Epoch:  500 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.666667\n",
-      "Epoch:  500 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.666667\n",
-      "Epoch:  600 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.625000\n",
-      "Epoch:  600 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.625000\n",
-      "Epoch:  700 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.588235\n",
-      "Epoch:  700 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.588235\n",
-      "Epoch:  800 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.555556\n",
-      "Epoch:  800 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.555556\n",
-      "Epoch:  900 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.526316\n",
-      "Epoch:  900 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.526316\n",
-      "Epoch: 1000 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.500000\n",
-      "Epoch: 1000 | Loss: 1.0786 | Accuracy: 38.33% | LR: 0.500000\n"
+      "Epoch:    0 | Loss: 1.0986 | Accuracy: 34.00% | LR: 1.000000\n",
+      "Epoch:  100 | Loss: 1.0813 | Accuracy: 42.00% | LR: 0.909091\n",
+      "Epoch:  100 | Loss: 1.0813 | Accuracy: 42.00% | LR: 0.909091\n",
+      "Epoch:  200 | Loss: 1.0724 | Accuracy: 41.33% | LR: 0.833333\n",
+      "Epoch:  200 | Loss: 1.0724 | Accuracy: 41.33% | LR: 0.833333\n",
+      "Epoch:  300 | Loss: 1.0596 | Accuracy: 42.00% | LR: 0.769231\n",
+      "Epoch:  300 | Loss: 1.0596 | Accuracy: 42.00% | LR: 0.769231\n",
+      "Epoch:  400 | Loss: 1.0384 | Accuracy: 44.67% | LR: 0.714286\n",
+      "Epoch:  400 | Loss: 1.0384 | Accuracy: 44.67% | LR: 0.714286\n",
+      "Epoch:  500 | Loss: 1.0793 | Accuracy: 41.67% | LR: 0.666667\n",
+      "Epoch:  500 | Loss: 1.0793 | Accuracy: 41.67% | LR: 0.666667\n",
+      "Epoch:  600 | Loss: 1.0305 | Accuracy: 43.33% | LR: 0.625000\n",
+      "Epoch:  600 | Loss: 1.0305 | Accuracy: 43.33% | LR: 0.625000\n",
+      "Epoch:  700 | Loss: 1.0290 | Accuracy: 43.00% | LR: 0.588235\n",
+      "Epoch:  700 | Loss: 1.0290 | Accuracy: 43.00% | LR: 0.588235\n",
+      "Epoch:  800 | Loss: 1.0284 | Accuracy: 43.67% | LR: 0.555556\n",
+      "Epoch:  800 | Loss: 1.0284 | Accuracy: 43.67% | LR: 0.555556\n",
+      "Epoch:  900 | Loss: 1.0283 | Accuracy: 43.67% | LR: 0.526316\n",
+      "Epoch:  900 | Loss: 1.0283 | Accuracy: 43.67% | LR: 0.526316\n",
+      "Epoch: 1000 | Loss: 1.0280 | Accuracy: 44.00% | LR: 0.500000\n",
+      "Epoch: 1000 | Loss: 1.0280 | Accuracy: 44.00% | LR: 0.500000\n"
      ]
     }
    ],
@@ -573,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "id": "76d90900",
    "metadata": {},
    "outputs": [
@@ -585,17 +591,17 @@
       "======================================================================\n",
       "EXPERIMENT 1: SGD with Momentum (momentum=0.9, decay=1e-4)\n",
       "======================================================================\n",
-      "Epoch:    0 | Loss: 1.0986 | Accuracy: 28.67% | LR: 1.000000\n",
-      "Epoch:  100 | Loss: 1.0828 | Accuracy: 40.33% | LR: 0.990099\n",
-      "Epoch:  200 | Loss: 1.0827 | Accuracy: 39.33% | LR: 0.980392\n",
-      "Epoch:  300 | Loss: 1.0827 | Accuracy: 39.33% | LR: 0.970874\n",
-      "Epoch:  400 | Loss: 1.0827 | Accuracy: 39.33% | LR: 0.961538\n",
-      "Epoch:  500 | Loss: 1.0827 | Accuracy: 39.67% | LR: 0.952381\n",
-      "Epoch:  600 | Loss: 1.0827 | Accuracy: 39.67% | LR: 0.943396\n",
-      "Epoch:  700 | Loss: 1.0827 | Accuracy: 39.33% | LR: 0.934579\n",
-      "Epoch:  800 | Loss: 1.0827 | Accuracy: 39.67% | LR: 0.925926\n",
-      "Epoch:  900 | Loss: 1.0827 | Accuracy: 39.67% | LR: 0.917431\n",
-      "Epoch: 1000 | Loss: 1.0827 | Accuracy: 39.67% | LR: 0.909091\n",
+      "Epoch:    0 | Loss: 1.0986 | Accuracy: 29.67% | LR: 1.000000\n",
+      "Epoch:  100 | Loss: 1.0785 | Accuracy: 42.67% | LR: 0.990099\n",
+      "Epoch:  200 | Loss: 1.0785 | Accuracy: 43.33% | LR: 0.980392\n",
+      "Epoch:  300 | Loss: 1.0785 | Accuracy: 43.00% | LR: 0.970874\n",
+      "Epoch:  400 | Loss: 1.0785 | Accuracy: 43.00% | LR: 0.961538\n",
+      "Epoch:  500 | Loss: 1.0785 | Accuracy: 43.00% | LR: 0.952381\n",
+      "Epoch:  600 | Loss: 1.0785 | Accuracy: 43.00% | LR: 0.943396\n",
+      "Epoch:  700 | Loss: 1.0785 | Accuracy: 43.33% | LR: 0.934579\n",
+      "Epoch:  800 | Loss: 1.0785 | Accuracy: 43.67% | LR: 0.925926\n",
+      "Epoch:  900 | Loss: 1.0785 | Accuracy: 43.33% | LR: 0.917431\n",
+      "Epoch: 1000 | Loss: 1.0785 | Accuracy: 43.00% | LR: 0.909091\n",
       "✓ Experiment 1 Complete\n",
       "\n"
      ]
@@ -657,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "id": "21294f23",
    "metadata": {},
    "outputs": [
@@ -668,17 +674,17 @@
       "======================================================================\n",
       "EXPERIMENT 2: SGD with Learning Rate Decay (decay=1e-3, no momentum)\n",
       "======================================================================\n",
-      "Epoch:    0 | Loss: 1.0986 | Accuracy: 30.33% | LR: 1.000000\n",
-      "Epoch:  100 | Loss: 1.0979 | Accuracy: 40.33% | LR: 0.909091\n",
-      "Epoch:  200 | Loss: 1.0843 | Accuracy: 38.33% | LR: 0.833333\n",
-      "Epoch:  300 | Loss: 1.0827 | Accuracy: 38.67% | LR: 0.769231\n",
-      "Epoch:  400 | Loss: 1.0823 | Accuracy: 38.67% | LR: 0.714286\n",
-      "Epoch:  500 | Loss: 1.0810 | Accuracy: 40.00% | LR: 0.666667\n",
-      "Epoch:  600 | Loss: 1.0781 | Accuracy: 40.67% | LR: 0.625000\n",
-      "Epoch:  700 | Loss: 1.0745 | Accuracy: 41.00% | LR: 0.588235\n",
-      "Epoch:  800 | Loss: 1.0724 | Accuracy: 41.33% | LR: 0.555556\n",
-      "Epoch:  900 | Loss: 1.0715 | Accuracy: 41.00% | LR: 0.526316\n",
-      "Epoch: 1000 | Loss: 1.0711 | Accuracy: 40.67% | LR: 0.500000\n",
+      "Epoch:    0 | Loss: 1.0986 | Accuracy: 25.00% | LR: 1.000000\n",
+      "Epoch:  100 | Loss: 1.0979 | Accuracy: 39.33% | LR: 0.909091\n",
+      "Epoch:  200 | Loss: 1.0847 | Accuracy: 41.00% | LR: 0.833333\n",
+      "Epoch:  300 | Loss: 1.0836 | Accuracy: 41.00% | LR: 0.769231\n",
+      "Epoch:  400 | Loss: 1.0836 | Accuracy: 41.00% | LR: 0.714286\n",
+      "Epoch:  500 | Loss: 1.0836 | Accuracy: 41.00% | LR: 0.666667\n",
+      "Epoch:  600 | Loss: 1.0835 | Accuracy: 41.00% | LR: 0.625000\n",
+      "Epoch:  700 | Loss: 1.0834 | Accuracy: 40.67% | LR: 0.588235\n",
+      "Epoch:  800 | Loss: 1.0832 | Accuracy: 40.33% | LR: 0.555556\n",
+      "Epoch:  900 | Loss: 1.0827 | Accuracy: 41.33% | LR: 0.526316\n",
+      "Epoch: 1000 | Loss: 1.0818 | Accuracy: 42.67% | LR: 0.500000\n",
       "✓ Experiment 2 Complete\n",
       "\n"
      ]
@@ -740,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "id": "81ee5e95",
    "metadata": {},
    "outputs": [
@@ -757,12 +763,12 @@
       "--------------------------------------------------------------------------------\n",
       "Optimizer                      SGD + Momentum            SGD + Decay              \n",
       "Loss Stabilization (epoch)     200                       100                      \n",
-      "Final Loss (1000 epochs)       1.0827                    1.0711                   \n",
-      "Final Accuracy                 39.67%                    40.67%                   \n",
+      "Final Loss (1000 epochs)       1.0785                    1.0818                   \n",
+      "Final Accuracy                 43.00%                    42.67%                   \n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "✓ Faster Convergence: Experiment 2 (SGD + Decay) (~100 epochs faster)\n",
-      "✓ Higher Accuracy: Experiment 2 (SGD + Decay) (+1.00%)\n",
+      "✓ Higher Accuracy: Experiment 1 (SGD + Momentum) (+0.33%)\n",
       "\n",
       "======================================================================\n"
      ]
@@ -835,19 +841,19 @@
     "\n",
     "**a) Epoch Stabilization:**\n",
     "\n",
-    "    SGD with Momentum: Stabilized very quickly (around epoch 200), but at a high loss value. This indicates it got stuck in a suboptimal solution and could not improve further.\n",
+    "    SGD with Momentum: The loss stabilized almost immediately. It dropped significantly by epoch 100 to 1.0785 and did not improve for the remaining 900 epochs, indicating it found a solution very quickly and got stuck there.\n",
     "\n",
-    "    SGD with Decay: Showed continuous improvement. Its loss decreased throughout all 1000 epochs, never fully stabilizing, which was beneficial as it kept finding a better solution.\n",
+    "    SGD with Decay: This optimizer was much slower. The loss decreased gradually throughout the entire 1000-epoch run, showing a more methodical but less aggressive search.\n",
     "\n",
     "**b) Final Accuracy:**\n",
     "\n",
-    "    SGD with Momentum: The final accuracy was lower at 39.67%, reflecting its higher final loss.\n",
+    "    SGD with Momentum: Achieved a higher final accuracy of 43.00%. It reached this level of performance very early in the training process.\n",
     "\n",
-    "    SGD with Decay: Achieved a higher final accuracy of 40.67% by finding a better solution with a lower loss.\n",
+    "    SGD with Decay: Reached a slightly lower final accuracy of 42.67%.\n",
     "\n",
     "**Overall Comparison:**\n",
     "\n",
-    "The SGD with Learning Rate Decay was the superior optimizer. While the Momentum optimizer appeared to converge faster, it settled for a worse solution. The Decay optimizer's methodical approach led to a more accurate final model."
+    "In this experiment, SGD with Momentum was the superior optimizer. It converged significantly faster and settled on a better final solution, resulting in both a lower loss and a higher accuracy than the SGD with Decay method."
    ]
   }
  ],
