Add Exercise 2 and update Exercise 1 with section headers
Added ESCUETA-EXERCISE_2.ipynb containing neural network implementations for classification tasks, including a custom Dense_Layer class and forward passes for Iris and Breast Cancer datasets. Updated ESCUETA-EXERCISE_1.ipynb by inserting markdown headers to clearly separate sections for each problem.

--- a/CS 3B/MARC_JOSHUA_ESCUETA/ESCUETA-EXERCISE_1.ipynb
+++ b/CS 3B/MARC_JOSHUA_ESCUETA/ESCUETA-EXERCISE_1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d7efe702",
+   "metadata": {},
+   "source": [
+    "Number 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "423c3d42",
@@ -67,6 +75,14 @@
     "print(f\"  Weighted sum: (0.6 × {x1_test2}) + (0.4 × {x2_test2}) + (-3) = {sum2}\")\n",
     "print(f\"  Is {sum2} >= 1? {sum2 >= 1}\")\n",
     "print(f\"  Output: {output2} ({'PASS' if output2 == 1 else 'FAIL'})\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f2200f6",
+   "metadata": {},
+   "source": [
+    "Number 2"
    ]
   },
   {
@@ -146,8 +162,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f1b0f879",
+   "metadata": {},
+   "source": [
+    "Number 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0c53dfe5",
    "metadata": {},
    "outputs": [
