Re-save Exercises 2 and 4 to trigger PR | Villarin

--- a/CS 3A/ATHENA_VILLARIN/VILLARIN-EXERCISE_4.ipynb
+++ b/CS 3A/ATHENA_VILLARIN/VILLARIN-EXERCISE_4.ipynb
@@ -557,6 +557,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6bf0c4e",
+   "metadata": {},
+   "source": [
+    "Added this line for git to register changes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "99f86cb1",
    "metadata": {},
    "source": []
