--- a/CS 3A/ATHENA_VILLARIN/VILLARIN-EXERCISE_2.ipynb
+++ b/CS 3A/ATHENA_VILLARIN/VILLARIN-EXERCISE_2.ipynb
@@ -328,6 +328,14 @@
     "\n",
     "print(\"Predicted Class:\", classification)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8679b710",
+   "metadata": {},
+   "source": [
+    "Added this line for git to register changes"
+   ]
   }
  ],
  "metadata": {
