Modified file for it to be included in the PR

--- a/CS 3A/ATHENA_VILLARIN/VILLARIN-EXERCISE_4.ipynb
+++ b/CS 3A/ATHENA_VILLARIN/VILLARIN-EXERCISE_4.ipynb
@@ -560,7 +560,7 @@
    "id": "d6bf0c4e",
    "metadata": {},
    "source": [
-    "Added this line for git to register changes"
+    "Added this line for git to register changes."
    ]
   },
   {
